--- a/index.html
+++ b/index.html
@@ -3,26 +3,21 @@
 <head>
  <meta charset="utf-8">
  <title>Rainydays | Pushing The Comfort Zone</title>
- <link rel="stylesheet" href="styles.css">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+ <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
- <nav>
-    <input type="checkbox" id="check">
-    <label for="check">
-    <i class="fas fa-bars" id="btn"></i>
-    <i class="fas fa-times" id="cancel"></i>
-    </label>
-  <a href="index.html"><img src="images/RainyDaysLogo.png" alt="logo" class="logo"></a>
-  <ul>
-    <li><a href="newarrivals.html">New Arrivals</a></li>
-    <li><a href="men.html">Men</a></li>
-    <li><a href="women.html">Women</a></li>
-    <li><a href="hikinggear.html">Hiking Gear</a></li>
-    <li><a href="aboutus.html">About Us</a></li>
-    <li><a href="contactus.html">Contact Us</a></li>
-  </ul>
- </nav>
+  <div class="nav">
+    <label for="toggle">&#9776;</label>
+    <input type="checkbox" id="toggle"/>
+    <div class="menu">
+      <a href="#">New Arriwals</a>
+      <a href="#">Men</a>
+      <a href="#">Women</a>
+      <a href="#">Hiking Gear</a>
+      <a href="#">About Us</a>
+      <a href="#">Contact US<a>
+    </div>
+  </div>
 </body>
 </html>
