updated header and module 2

--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
       <a href="woman.html">Women</a>
       <a href="hikinggear.html">Hiking Gear</a>
       <a href="aboutus.html">About Us</a>
-      <a href="contactus.html">Contact Us<a>
+      <a href="contactus.html">Contact US<a>
     </div>
   </div>
 </body>
