--- a/index.html
+++ b/index.html
@@ -5,19 +5,39 @@
  <title>Rainydays | Pushing The Comfort Zone</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link href="css/styles.css" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="nav">
+ <header>
+   <nav class="top-line">
+   <a href="index.html"><img src="images/RainyDaysLogo.png" alt="logo" class="logo"></a>
+   <div class="nav">
     <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle"/>
     <div class="menu">
-      <a href="#">New Arriwals</a>
-      <a href="#">Men</a>
-      <a href="#">Women</a>
-      <a href="#">Hiking Gear</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact US<a>
+     <a href="newarrivals.html">New Arriwals</a>
+     <a href="men.html">Men</a>
+     <a href="woman.html">Women</a>
+     <a href="hikinggear.html">Hiking Gear</a>
+     <a href="aboutus.html">About Us</a>
+     <a href="contactus.html">Contact Us<a>
     </div>
+   </div>
+   </nav>
+  </header>
+  <section class="module-1">
+  <img src="images/headerphoto.jpg" alt="Header Photo" class="header-photo" />
+  <h1>The New Season Has Arrived!</h1>
+  <div class="shop-now">
+    <a href="newarrivals.html">
+   <button class="btn">Shop now</button></a>
   </div>
-</body>
+  </section>
+  <main>
+    <section class="module-two">
+      <a href="women.html"><img src="images/women.PNG" alt="Womens Outerwear" class="img-women"></a>
+      <a href="hikinggear.html"><img src="images/hiking.PNG" alt="Hiking Gear" class="img-hikinggear"></a>
+      <a href="men.html"><img src="images/men.PNG" alt="Mens Outerwear" class="img-men"></a>
+    </section>
+ </body>
 </html>
