--- a/index.html
+++ b/index.html
@@ -35,9 +35,31 @@
   </section>
   <main>
     <section class="module-two">
-      <a href="women.html"><img src="images/women.PNG" alt="Womens Outerwear" class="img-women"></a>
+      <div>
+        <a href="women.html"><img src="images/women.PNG" alt="Womens Outerwear" class="img-women"></a>
+        <a href="women.html">Women's Outerwear</a>
+        <button class="btn-small">Shop now</button></a>
+      </div>
+      <div>
       <a href="hikinggear.html"><img src="images/hiking.PNG" alt="Hiking Gear" class="img-hikinggear"></a>
+      <a href="hikinggear.html">Hiking Gear</a>
+      <button class="btn-small">Shop now</button></a>
+    </div>
+    <div>
       <a href="men.html"><img src="images/men.PNG" alt="Mens Outerwear" class="img-men"></a>
+      <a href="men.html">Men's Outerwear</a>
+      <button class="btn-small">Shop now</button></a>
+    </div>
     </section>
+    <section>
+      <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+    </section>
+    <section class="module-3">
+      <img src="images/Module3.PNG" alt="Man running in rain" class="img-module3" />
+      <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua.</h3>
+    </section>
+  </main>
  </body>
 </html>
