added a button to module3

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <img src="images/Module3.PNG" alt="Man running in rain" class="img-module3" />
       <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
         aliqua.</h3>
+      <button class="btn2">Shop now</button></a>
     </section>
   </main>
  </body>
