--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
       <img src="images/Module3.PNG" alt="Man running in rain" class="img-module3" />
       <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
         aliqua.</h3>
-      <button class="btn2">Shop now</button></a>
+       <div>
+        <button class="btn2">Shop now</button></a>
+       </div> 
+    </section>
+    <section class="module-4">
+      <img src="images/1.PNG" alt="woman in flowerfield with yellow jacket" />
+      <img src="images/2.PNG" alt="man in grey jacket with a big backpack" />
+      <img src="images/3.PNG" alt="man skiing in a yellow and navy jacket" class="img-3" />
+      <img src="images/4.PNG" alt="man canooing in green and blue jacket" class="img-4" />
     </section>
   </main>
  </body>
